# onvif-ptz-stream-api

./: .pre-commit-config.yaml  PTZ_TROUBLESHOOTING.md  README.md  main.py  pyproject.toml  test_ptz_capabilities.py
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json  docker-compose.yml
.devcontainer/wsdl/: devicemgmt.wsdl
app/api/: dependencies.py  healthcheck.py
app/api/v1/: router.py
app/api/v1/endpoints/: ptz.py  stream.py
app/contracts/services/: __init__.py  health_check.py  onvif_service.py
app/core/: app_factory.py  config.py  constants.py  enums.py  lifespan.py  logging_config.py  middleware.py  types.py
app/schemas/: health.py
app/services/: health_check.py  onvif_service.py  shared_services.py
