[project]
name = "onvif-ptz-stream-api"
version = "0.2.1"
description = "This FastAPI application provides a low-latency video streaming interface and PTZ control API for ONVIF cameras"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "onvif-zeep>=0.2.12",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "conventional-pre-commit>=4.2.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.20.0",
    "ruff>=0.12.4",
]
